# Aida64TrafficMonitorPlugin

./: CMakeLists.txt
include/: aida64_error_item.h  aida64_plugin.h  traffic_monitor.h  universal_aida_item.h
src/: aida64_error_item.cpp  aida64_plugin.cpp  main.cpp  universal_aida_item.cpp
